DPX header wrong, making it impossible to import to other software like AfterEffects or Premiere (2014) #43143

Closed
opened 2015-01-06 09:14:23 +01:00 by Sebastian Koenig · 8 comments

System Information
OSX 10.10.1, GTM 750M

Blender Version
Broken: 2.73 22ce525
Worked:

Short description of error
DPX files exported from Blender cannot be imported to some other programs. While it works in DaVinci Resolve, it fails in AfterEffects and Premiere 2014. Apparently it's because of one letter in the DPX header. AfterEffects expects the version number to be uppercase, which appears to be also in the format description. (http:*www.simplesystems.org/users/bfriesen/dpx/S268M_Revised.pdf) Also others experience this issue: https:*forums.adobe.com/thread/1600067
It would be a simple fix, which I have attached below.

dpx_fix.diff

Exact steps for others to reproduce the error
Export DPX from Blender, try to import to AfterEffects CC. You'll get an error message that the header is wrong. Bildschirmfoto_2015-01-06_um_09.13.24.png

**System Information** OSX 10.10.1, GTM 750M **Blender Version** Broken: 2.73 22ce525 Worked: **Short description of error** DPX files exported from Blender cannot be imported to some other programs. While it works in DaVinci Resolve, it fails in AfterEffects and Premiere 2014. Apparently it's because of one letter in the DPX header. AfterEffects expects the version number to be uppercase, which appears to be also in the format description. (http:*www.simplesystems.org/users/bfriesen/dpx/S268M_Revised.pdf) Also others experience this issue: https:*forums.adobe.com/thread/1600067 It would be a simple fix, which I have attached below. [dpx_fix.diff](https://archive.blender.org/developer/F135589/dpx_fix.diff) **Exact steps for others to reproduce the error** Export DPX from Blender, try to import to AfterEffects CC. You'll get an error message that the header is wrong. ![Bildschirmfoto_2015-01-06_um_09.13.24.png](https://archive.blender.org/developer/F135587/Bildschirmfoto_2015-01-06_um_09.13.24.png)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

This issue was referenced by e961c06a6e

This issue was referenced by e961c06a6ea9fbe48a375eaf78fd2ca536bd430e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e961c06a6e.

Closed by commit e961c06a6e.
Member

Added subscriber: @Ton

Added subscriber: @Ton
Member

Nice discovery. Note that we use very old code (from film gimp), which probably used Cineon code from the DPX inventor Kodak. In the Kodak days it was lower case.

http://www.cineon.com/ff_draft.php

Nice discovery. Note that we use very old code (from film gimp), which probably used Cineon code from the DPX inventor Kodak. In the Kodak days it was lower case. http://www.cineon.com/ff_draft.php

This issue was referenced by d93ccef052

This issue was referenced by d93ccef052ceaae5c980d855fa232dd000178fd4
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43143
No description provided.