Fix T43143: DPX header wrong, making it impossible to import to other software

The issue was caused by the single letter in header, which is expected to be
captial as per standard: http://www.simplesystems.org/users/bfriesen/dpx/S268M_Revised.pdf